playbooks/k8s/divorce/divorce_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: divorce-service
spec:
    selector:
        app: divorce
    ports:
      - protocol: TCP
        port: 8080
        name: divorce-service
        targetPort: 80
    type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: divorce-app
  labels:
    app: divorce
spec:
    replicas: 1
    selector:
        matchLabels:
          app: divorce
    template:
        metadata:
          labels:
              app: divorce
        spec:
          containers:
          - name: divorce
            image: ghcr.io/eliteonetube/divorce_app:v0.2
            ports:
            - containerPort: 8080
              name: divorce
          - name: nginx
            image: nginx:stable
            ports:
            - containerPort: 80
            volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true

          volumes:
          - name: nginx-config
            configMap:
              name: nginx-config

          restartPolicy: Always
          imagePullSecrets:
            - name: mysecret
