playbooks/k8s/divorce/divorce_ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: divorce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: divorce.chickenkiller.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: divorce-service
            port:
              number: 8080
