playbooks/k8s/divorce/divorce_ssl_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: divorce-ssl-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: "divorce.chickenkiller.com"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: divorce-service
            port:
              number: 8080
  tls:
  - hosts:
    - divorce.chickenkiller.com
    secretName: divorce-production-certificate
